; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/fm10k/extr_fm10k_main.c_fm10k_check_tx_hang.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/fm10k/extr_fm10k_main.c_fm10k_check_tx_hang.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fm10k_ring = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@__FM10K_HANG_CHECK_ARMED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fm10k_check_tx_hang(%struct.fm10k_ring* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fm10k_ring*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.fm10k_ring* %0, %struct.fm10k_ring** %3, align 8
  %7 = load %struct.fm10k_ring*, %struct.fm10k_ring** %3, align 8
  %8 = call i64 @fm10k_get_tx_completed(%struct.fm10k_ring* %7)
  store i64 %8, i64* %4, align 8
  %9 = load %struct.fm10k_ring*, %struct.fm10k_ring** %3, align 8
  %10 = getelementptr inbounds %struct.fm10k_ring, %struct.fm10k_ring* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %5, align 8
  %13 = load %struct.fm10k_ring*, %struct.fm10k_ring** %3, align 8
  %14 = call i64 @fm10k_get_tx_pending(%struct.fm10k_ring* %13, i32 1)
  store i64 %14, i64* %6, align 8
  %15 = load %struct.fm10k_ring*, %struct.fm10k_ring** %3, align 8
  %16 = call i32 @clear_check_for_tx_hang(%struct.fm10k_ring* %15)
  %17 = load i64, i64* %6, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %1
  %20 = load i64, i64* %5, align 8
  %21 = load i64, i64* %4, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %33

23:                                               ; preds = %19, %1
  %24 = load i64, i64* %4, align 8
  %25 = load %struct.fm10k_ring*, %struct.fm10k_ring** %3, align 8
  %26 = getelementptr inbounds %struct.fm10k_ring, %struct.fm10k_ring* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  store i64 %24, i64* %27, align 8
  %28 = load i32, i32* @__FM10K_HANG_CHECK_ARMED, align 4
  %29 = load %struct.fm10k_ring*, %struct.fm10k_ring** %3, align 8
  %30 = getelementptr inbounds %struct.fm10k_ring, %struct.fm10k_ring* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @clear_bit(i32 %28, i32 %31)
  store i32 0, i32* %2, align 4
  br label %39

33:                                               ; preds = %19
  %34 = load i32, i32* @__FM10K_HANG_CHECK_ARMED, align 4
  %35 = load %struct.fm10k_ring*, %struct.fm10k_ring** %3, align 8
  %36 = getelementptr inbounds %struct.fm10k_ring, %struct.fm10k_ring* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @test_and_set_bit(i32 %34, i32 %37)
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %33, %23
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i64 @fm10k_get_tx_completed(%struct.fm10k_ring*) #1

declare dso_local i64 @fm10k_get_tx_pending(%struct.fm10k_ring*, i32) #1

declare dso_local i32 @clear_check_for_tx_hang(%struct.fm10k_ring*) #1

declare dso_local i32 @clear_bit(i32, i32) #1

declare dso_local i32 @test_and_set_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
